--- a/index.html
+++ b/index.html
@@ -9,50 +9,51 @@
   </head>
   <body>
     <div class="container">
-        <!-- header -->
-      <div class="item header"><h1>My Blog</h></div>
-        <!-- Blog 1 -->
+      <div class="item header"><h1>My Blog</h1></div>
       <div class="item blog">
-          <div>
-              <h2>BLOG - 1</h2>
-              <p>Lorem, Jan 7, 2020</p>
-              <img src="./images/b1.jpg" alt="b1 image">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, laudantium vitae, vero qui consequatur magni aliquid dolore dolor velit maiores itaque architecto nostrum aut nobis temporibus. Reprehenderit iure, repellat facilis fuga excepturi provident eveniet,  </p>
-          </div>
-          </div>
-
-          <!-- about me -->
-
-      <div class="item aboutme">
-          <h3>About Me</h3>
-          <img src="./images/dev.png" alt="About me">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <h2>Blog - 1</h2>
+        <p>Lorem, Jan 7 2020</p>
+        <img src="./images/b1.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+          asperiores aspernatur distinctio quos unde in porro iusto voluptatem
+          amet.
+        </p>
       </div>
 
+      <!-- about me -->
+      <div class="item aboutme">
+        <h3>About me</h3>
+        <img src="./images/dev.png" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, quo!
+          Repellat dicta quod velit! Ea dolores maiores quod
+        </p>
+      </div>
       <!-- Popular Post -->
       <div class="item pop-post">
-          <h3>Popular Post</h3>
-          <img src="./images/p1.jpeg" alt="Popular 1">
-          <img src="./images/p2.jpg" alt="Popular 2">
-          <img src="./images/p3.jpg" alt="Popular 3">
+        <h3>Popular post</h3>
+        <img src="./images/p1.jpg" alt="" />
+        <img src="./images/p2.jpg" alt="" />
+        <img src="./images/p3.jpg" alt="" />
       </div>
 
       <!-- Blog 2 -->
-      <div class="item blog">
-          
-        <div>
-            <h2>BLOG - 2</h2>
-              <p>Lorem, Jan 7, 2020</p>
-              <img src="./images/b2.jpg" alt="b1 image">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, laudantium vitae, vero qui consequatur magni aliquid dolore dolor velit maiores itaque architecto nostrum aut nobis temporibus. Reprehenderit iure, repellat facilis fuga excepturi provident eveniet,  </p>
-        </div>
+      <div class="item blog2">
+        <h2>Blog - 2</h2>
+        <p>Lorem, Jan 7 2020</p>
+        <img src="./images/b2.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+          asperiores aspernatur distinctio quos unde in porro iusto voluptatem
+          amet.
+        </p>
+      </div>
+      <div class="item followme">
+        <h3>Follow me</h3>
+        <p>Some text...</p>
       </div>
 
-      <!-- Follow me -->
-      <div class="item followme">
-          <h3>Follow Me</h3>
-          <p>Some text...</p>
-      </div>
       <div class="item footer">Footer</div>
     </div>
   </body>
